fix: shopping list expansion and overlap with search section

--- a/index.html
+++ b/index.html
@@ -129,9 +129,10 @@
                             </div>
                             <div id="shopping-list-recipes">
 
-
+                                <div class="rotated">
                                 <h3>Ingredientes Recetas</h3>
                                 <ul id="shoppingList" class="shoppingList-class"></ul>
+                            </div>
                             </div>
                         </article>
                         <article id="shopping-list-manual">
@@ -159,9 +160,10 @@
                                 <button type="button" id="addManualBtn" class="btn btn-main">Añadir</button>
                             </form>
                             <div id="shopping-list-others">
-
+                                <div class="rotated">
                                 <h3>Otros Ingredientes</h3>
                                 <ul id="manualList" class="shoppingList-class"></ul>
+                                </div>
                             </div>
                         </article>
                     </div>
